# ebpf-sentinel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
config/: sentinel-grpc.yaml  sentinel.yaml
docs/: K8S.md  PORTABILITY.md
examples/: README.md  demo-detection.sh  docker-compose.yml
examples/config/: alerts-only.yaml  custom-rule-lab.yaml  fim-lab.yaml  k8s-node.yaml  triage.yaml
examples/deploy/: README.md  daemonset.yaml  sentinel.service
examples/prometheus/: prometheus.yml
examples/rules/: README.md  demo-tmp-echo.yaml
examples/scripts/: live-sensor.sh  preflight.sh  run-grpc-pipeline.sh  watch-alerts.sh
examples/sigma/: demo_tmp_shell.yml
examples/triggers/: all-bundled.sh  custom-rule.sh  fim-lab.sh  writable-staging.sh
rules/: credential_access.yaml  file_integrity.yaml  ipv6_connect.yaml  ml_model_exfil.yaml  reverse_shell.yaml  writable_staging.yaml
sentinel/: Cargo.toml  build.rs
sentinel-common/: Cargo.toml
sentinel-common/src/: lib.rs
sentinel-ebpf/: Cargo.toml
sentinel-ebpf/src/: helpers.rs  main.rs  probes.rs  tracepoint_offsets.rs
sentinel/proto/: sentinel.proto
sentinel/src/: config.rs  enricher.rs  event.rs  k8s.rs  lib.rs  loader.rs  main.rs  metrics.rs  pipeline.rs  suppress.rs  triage.rs
sentinel/src/rules/: mod.rs  sigma.rs
sentinel/src/sinks/: grpc.rs  mod.rs  ndjson.rs  stdout.rs
sentinel/tests/: integration.rs
sigma/: shell_from_netcat.yml
