[workspace]
resolver = "2"
members = [
    "sentinel",
    "sentinel-common",
    "sentinel-ebpf",
]
default-members = ["sentinel", "sentinel-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.3", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.0", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.19", default-features = false }
clap = { version = "4", default-features = false, features = ["std", "derive", "help"] }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", default-features = false }
tonic = "0.12"
prost = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
glob = "0.3"
which = { version = "6", default-features = false }

[profile.release.package.sentinel-ebpf]
debug = 2
codegen-units = 1
strip = false
