[package]
name = "sentinel-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
sentinel-common = { path = "../sentinel-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "sentinel"
path = "src/main.rs"
