[package]
name = "sentinel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "sentinel"

[lib]
name = "sentinel"
path = "src/lib.rs"

[dependencies]
sentinel-common = { path = "../sentinel-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
async-trait = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
glob = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "fs",
    "io-util",
] }
tonic = { workspace = true, features = ["transport"] }
regex = "1"
prometheus = "0.13"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

[dev-dependencies]
testcontainers = "0.23"
tokio = { workspace = true, features = ["macros", "rt"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
sentinel-ebpf = { path = "../sentinel-ebpf" }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[[bin]]
name = "grpc-ingest"
path = "src/bin/grpc-ingest.rs"
